# thick_ptycho

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml  config_gen_data.yaml  conftest.py  gen_data_config.yaml  generate_data.py  mkdocs.yml  pyproject.toml  recon_config.yaml  reconstruct_sample.py  run_with_config.py
.github/: dependabot.yml
.github/workflows/: deploy_docs.yml  linter.yml  pylinter.yml  tests.yml
docs/: class_structure.md  discretization_of_sample.md  index.md  installation.md  overview.md  ptycho_sim_setup.md  references.bib  running_reconstructions.md  running_simulations.md  theory.md
notebooks/: 1_forward_model_3d.ipynb  1_ms_pwe_comparison.ipynb  1_sample_space_3d.ipynb  1c_pwe_gmres.ipynb  2_forward_model_3d.ipynb  2_forward_model_3d_camera_man.ipynb  2_ms_pwe_comparison.ipynb  2_ptychography_simple_example.ipynb  2_sample_space_3d.ipynb  3_forward_model_2d.ipynb  3_ptychography_simple_example.ipynb  4_forward_model_2d copy.ipynb  4_forward_model_2d.ipynb  4_least_squares_1d.ipynb  5_least_squares_1d copy.ipynb  5_least_squares_1d.ipynb  6_multislice_least_squares_1d.ipynb  config.yaml  kx_dirichlet.npz  kx_impedance.csv  kx_impedance.npz  kx_neumann.csv  kx_neumann.npz  run_reconstruction.py  test_impedance.ipynb
notebooks/.ipynb_checkpoints/: 4_forward_model_2d-checkpoint.ipynb  5_least_squares_1d-checkpoint.ipynb
notebooks/2D_examples/: 1_generate_simulated_data.ipynb  1_generate_simulated_data_petsc.ipynb  1a_ms_pwe_comparison_simple_object.ipynb  1b_ms_pwe_comparison_nonsimple_object copy.ipynb  1b_ms_pwe_comparison_nonsimple_object.ipynb  1b_pwe copy.ipynb  1b_pwe.ipynb  1b_pwe_reduce_domain.ipynb  1c_pwe_gmres.ipynb  1c_pwe_parallel_in_time.ipynb  1d.ipynb  2.reconstructions.ipynb  2.reconstructions_petsc.ipynb  3.reduced_domain_forward_and_reconstruction.ipynb  4.pwe_parallel_in_time_forward.ipynb  ptycho_object_n_true.npy  utils.py
notebooks/3D_examples/: 2_forward_model_3d.ipynb  2_forward_model_3d_camera_man.ipynb  2_sample_space_3d.ipynb  3_ptychography_simple_example.ipynb  utils.py
tests/: config.yaml  test_config.py  test_solver_backward_1d.py  test_solver_backward_2d.py  test_solver_dirichlet_1d.py  test_solver_dirichlet_2d.py  test_solver_dirichlet_3d.py  test_solver_impedance_1d.py  test_solver_impedance_2d.py  test_solver_impedance_3d.py  test_solver_neumann_1d.py  test_solver_neumann_2d.py  test_solver_neumann_3d.py
tests/test_simulation/: test_ptycho_probe.py  test_scan_frame.py  test_shape.py  test_simulation_space1D.py  test_simulation_space2D.py  test_simulation_space3D.py
thick-ptycho/forward_model/: boundary_conditions.py  linear_system.py  solver.py
thick-ptycho/reconstruction/: least_squares.py
thick-ptycho/sample_space/: __init__.py
thick_ptycho/: __init__.py  run_with_config.py
thick_ptycho/forward_model/: __init__.py  base.py  base_pwe_solver.py  base_solver.py  boundary_conditions.py  initial_conditions.py  linear_system.py  ms_solver.py  multislice.py  pwe_solver.py  pwe_solver_full.py  pwe_solver_iterative.py  solver.py
thick_ptycho/reconstruction/: __init__.py  base.py  (+6 more)
thickptypy/: __init__.py
(+90 files in other folders)
