[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "thickptypy"
version = "0.1.0-dev"
description = "A Python package for thick sample ptychographic reconstruction"
authors = [{ name = "Bryce Shirley", email = "bryce.shirley@stfc.ac.uk" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy >=1.21.0",
    "matplotlib >=3.4.0",
    "scipy >=1.6.0",
    "jupyter >=1.1.1,<2.0.0",
    "tifffile >=2025.3.30",
    "notebook",
    "ipykernel",
    "pytest (>=8.4.1,<9.0.0)",
    "line-profiler (>=4.2.0,<5.0.0)"
]


[tool.setuptools.packages.find]
where = ["thickptypy"]

[tool.coverage.report]
show_missing = true
skip_covered = true

