[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "thick_ptycho"
version = "0.1.0-dev"
description = "A Python package for thick sample ptychographic reconstruction"
authors = [{ name = "Bryce Shirley", email = "bryce.shirley@stfc.ac.uk" }]
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy >=1.21.0",
    "matplotlib >=3.4.0",
    "scipy >=1.6.0",
    "jupyter >=1.1.1,<2.0.0",
    "tifffile >=2025.3.30",
    "notebook",
    "ipykernel",
    "pytest (>=8.4.1,<9.0.0)",
    "line-profiler (>=4.2.0,<5.0.0)",
    "scikit-image (>=0.24,<0.25)",
    "astropy (>=7.1.0,<8.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "opencv-python-headless (>=4.12.0.88,<5.0.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

[tool.setuptools.packages.find]
where = ["thick_ptycho"]

[tool.coverage.report]
show_missing = true
skip_covered = true


[dependency-groups]
dev = [
    "ruff (>=0.14.7,<0.15.0)",
    "pylint (>=3.2.5,<4.0.0)"
]
