[build-system]
requires = [
    "setuptools>=69",
    "setuptools-scm>=8",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "thick_ptycho"
description = "A Python package for thick sample ptychographic reconstruction"
authors = [{ name = "Bryce Shirley", email = "bryce.shirley@stfc.ac.uk" }]
requires-python = ">=3.11,<3.13"
dynamic = ["version"]  # <-- version comes from setuptools-scm

dependencies = [
    "numpy >=1.21.0",
    "matplotlib >=3.4.0",
    "scipy >=1.6.0",
    "jupyter >=1.1.1,<2.0.0",
    "tifffile >=2025.3.30",
    "notebook",
    "ipykernel",
    "scikit-image >=0.24,<0.25",
    "astropy >=7.1.0,<8.0.0",
    "ffmpeg-python >=0.2.0,<0.3.0",
    "opencv-python-headless>=4.12.0.88",
    "opencv-python>=4.12.0.88",
]

[project.optional-dependencies]
dev = [
    "pytest >=8.4.1,<9.0.0",
    "pytest-cov >=7.0.0,<8.0.0",
    "line-profiler >=4.2.0,<6.0.0",
    "pre-commit >=4.5.0,<5.0.0",
    "ruff >=0.14.7,<0.15.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["thick_ptycho"]

[tool.setuptools_scm]
write_to = "thick_ptycho/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
exclude = ["notebooks/3D_examples"]

[tool.ruff.format]
